--- a/archives.html
+++ b/archives.html
@@ -2,7 +2,7 @@
 layout: default
 title: Archives
 ---
-<h2>Archive</h2>
+<h2>Archives</h2>
 <div id="post_links">
 	<ul>
 	{% for post in site.posts %}
