--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 layout: default
 title: Home
 ---
-<div id="articles">
+<div id="article">
 {% for post in site.posts offset: 0 limit: 10 %}
 <h2 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
 <div id="post-date">{{ post.date | date_to_string }}</div>
 {{ post.content }}
+<br><br>
 </div>
 {% endfor %}
-
-
