--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@ title: Home
 <h2 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
 <div id="post-date">{{ post.date | date_to_string }}</div>
 {{ post.content }}
-<br><br>
+<hr style="
+			border-width: 0px; 
+			border-top: 1px solid #BDBDBD; 
+			margin-top: 20px;
+			margin-bottom: 20px; 
+			width: 650px;
+			margin-right: 20px;
+			text-align: left; ">
+
 {% endfor %}
 </div>
