--- a/archives.html
+++ b/archives.html
@@ -6,7 +6,7 @@ title: Archives
 <div id="post_links">
 	<ul>
 	{% for post in site.posts %}
-	<li><span>{{ post.date | date_to_string }}</span> <h2 class="post_links"><a href="{{ post.url }}">{{ post.title }}</a></h2></li><br>
+	<li><span>{{ post.date | date_to_string }}</span> <a  href="{{ post.url }}">{{ post.title }}</a></li><br>
 	{% endfor %}
 	</ul>
 </div>
