--- a/index_new.html
+++ b/index_new.html
@@ -3,7 +3,8 @@ layout: default_new
 title: Home
 ---
 
-{% for post in paginator.posts %}
+
+{% for post in site.posts limit: 8 %}
 
    <!-- here add you post markup -->
    <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
@@ -13,6 +14,7 @@ title: Home
   </div>
 {% endfor %}
 
+<!--
 <!-- Pagination links -->
 <div class="pagination">
   {% if paginator.previous_page %}
@@ -76,4 +78,4 @@ title: Home
   </p>
   {% endif %}
 
-</div>
+</div> -->
