--- a/index_new.html
+++ b/index_new.html
@@ -3,7 +3,7 @@ layout: default_new
 title: Home
 ---
 
-{% for post in site.posts limit: 8 %}
+<!-- {% for post in site.posts limit: 8 %} -->
 
    <!-- here add you post markup -->
    <h1 class="title"><a class="title" href="{{ post.url }}">{{ post.title }}</a></h1>
