--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 <div id="article">
 
-
+<!-- {% for post in site.posts limit: 8 %} -->
 
 <h2 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
 <div id="post-date">{{ post.date |date: "%B %d, %Y" }} | {{  post.category  }} | <a href="{{ post.url }}/#disqus_thread">comments coming soon</a></div>
@@ -18,37 +18,4 @@ title: Home
 			margin-right: 20px;
 			text-align: left; ">
 {% endfor %}
-</div>
-
-<div class="pagination">
-<ul>
-{% if paginator.previous_page %}
-{% if paginator.previous_page == 1 %}
-<li class="disabled"><a href="#">&laquo;</a></li>
-{% else %}
-<li><a href="/page{{paginator.previous_page}}">&laquo;</a></li>
-{% endif %}
-{% endif %}
- 
-{% if paginator.page == 1 %}
-<li class="disabled"><a href="#">1</a></li>
-{% else %}
-<li><a href="/">1</a></li>
-{% endif %}
- 
-{% for count in (2..paginator.total_pages) %}
-<li class="page">
-{% if count == paginator.page %}
-<li class="active"><a href="#">{{count}}</a></li>
-{% else %}
-<li><a href="/page{{count}}">{{count}}</a></li>
-{% endif %}
-{% endfor %}
- 
-{% if paginator.next_page %}
-<li class="active"><a href="/page{{paginator.next_page}}">&raquo;</a></li>
-{% else %}
-<li class="disabled"><a href="#">&raquo;</a></li>
-{% endif %}
-</ul>
 </div>
