--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@ title: Home
 <!-- Pagination links -->
 <div class="pagination">
   {% if paginator.previous_page %}
-    <a href="/page{{paginator.previous_page}}" class="previous">Newer</a>
+    <a href="/page{{paginator.previous_page}}" class="previous">Newer Posts</a>
   {% else %}
     <span class="previous">Previous</span>
   {% endif %}
-  <span class="page_number ">Page: {{paginator.page}} of {{paginator.total_pages}}</span>
+  <span class="page_number ">Page {{paginator.page}} of {{paginator.total_pages}}</span>
   {% if paginator.next_page %}
-    <a href="/page{{paginator.next_page}}" class="next ">Older</a>
+    <a href="/page{{paginator.next_page}}" class="next ">Older Posts</a>
   {% else %}
     <span class="next ">Next</span>
   {% endif %}
