--- a/index.html
+++ b/index.html
@@ -13,20 +13,6 @@ title: Home
 
 
 
-<!-- Pagination links -->
-<div class="pagination">
-  {% if paginator.previous_page %}
-    <a href="/page{{paginator.previous_page}}" class="previous">Newer Posts</a>
-  {% else %}
-    <span class="previous">Previous</span>
-  {% endif %}
-  <span class="page_number ">Page {{paginator.page}} of {{paginator.total_pages}}</span>
-  {% if paginator.next_page %}
-    <a href="/page{{paginator.next_page}}" class="next ">Older Posts</a>
-  {% else %}
-    <span class="next ">Next</span>
-  {% endif %}
-</div>
 
 <div id="post-pagination" class="pagination">
 
@@ -35,7 +21,7 @@ title: Home
     {% if paginator.previous_page == 1 %}
     <a href="/">Previous</a>
     {% else %}
-    <a href="/page{{paginator.previous_page}}">Previous</a>
+    <a href="/page{{paginator.previous_page}}">Newer Posts</a>
     {% endif %}
   </p>
   {% else %}
@@ -57,7 +43,7 @@ title: Home
 
   {% if paginator.next_page %}
   <p class="next">
-    <a href="/page{{paginator.next_page}}">Next</a>
+    <a href="/page{{paginator.next_page}}">Older Posts</a>
   </p>
   {% else %}
   <p class="next disabled">
