--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@ title: Home
 {% endfor %}
 
 
-
-
 <div id="post-pagination" class="pagination">
 
   {% if paginator.previous_page %}
   <p class="previous">
     {% if paginator.previous_page == 1 %}
-    <a href="/">Previous</a>
+    <a href="/">Home</a>
     {% else %}
     <a href="/page{{paginator.previous_page}}">Newer Posts</a>
     {% endif %}
