--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@ title: Home
     {% if paginator.previous_page == 1 %}
     <a href="/">Home</a>
     {% else %}
-    <a href="/page{{paginator.previous_page}}">Newer Posts</a>
+    <a href="/page{{paginator.previous_page}}"><< Newer Posts</a>
     {% endif %}
   </p>
   {% else %}
   <p class="previous disabled">
-    <span>Previous</span>
+    <span></span>
   </p>
   {% endif %}
 
   
   {% if paginator.next_page %}
   <p class="next">
-    <a href="/page{{paginator.next_page}}">Older Posts</a>
+    <a href="/page{{paginator.next_page}}">Older Posts >></a>
   </p>
   {% else %}
   <p class="next disabled">
