--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Home
   </p>
   {% else %}
   <p class="previous disabled">
-    <span></span>
+    <span>No newer Posts</span>
   </p>
   {% endif %}
 
