--- a/cat_blog.html
+++ b/cat_blog.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Archives
-permalink: /categories/blog
+permalink: /categories/blog/
 ---
 <h1 class="page">Category: blog</h1>
 
