--- a/cat_tech.html
+++ b/cat_tech.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Category Tech
+title: Category&#58; Tech
 permalink: /categories/tech/
 ---
 <h1 class="page">Category: tech</h1>
