--- a/cat_life.html
+++ b/cat_life.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Archives
+title: Category&#58; life
 permalink: /categories/life/
 ---
 <h1 class="page">Category: life</h1>
