--- a/cat_movies-and-television.html
+++ b/cat_movies-and-television.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Archives
+title: Category&#58; movies and television
 permalink: /categories/movies_and_television/
 ---
 <h1 class="page">Category: movies and television</h1>
