--- a/cat_quotes.html
+++ b/cat_quotes.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Archives
+title: Category&#58; quotes
 permalink: /categories/quotes/
 ---
 <h1 class="page">Category: quotes</h1>
