--- a/cat_blog copy.html
+++ b/cat_blog copy.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Archives
+title: Category&#58; blog
 permalink: /categories/blog/
 ---
 <h1 class="page">Category: blog</h1>
