--- a/cat_dublin.html
+++ b/cat_dublin.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Archives
+title: Category&#58; dublin
 permalink: /categories/dublin/
 ---
 <h1 class="page">Category: dublin</h1>
