--- a/cat_podcast.html
+++ b/cat_podcast.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Archives
+title: Category&#58; podcasts
 permalink: /categories/podcast/
 ---
 <h1 class="page">Category: podcast</h1>
