--- a/404.html
+++ b/404.html
@@ -16,13 +16,14 @@
 Return to <a href="http://blog.timmschoof.com">blog.timmschoof.com</a> or <a href="mailto:hello@timmschoof.com">contact me</a>.</p>
 <p style="position:absolute; bottom: 8px; right: 15px; font-size: 14px; opacity: 0.9; ">This 404 page is a ripoff of <a href="http://dribbble.com/404">dribbble's</a>. <a href="http://www.flickr.com/photos/schatz/891985/">Photo</a> by R. Schatzberger, used under CC-By-Sa.2.0 Licence.</p>
 </div>
+<!--include jquery & backstretch-->
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript" src="jquery.backstretch.min.js"></script>
 <script type="text/javascript">
 $(function(){
      $(window).resize(function(){
          if($(this).width() >= 767){
-             $.backstretch("/images/404.jpg", {speed: 150});
+             $.backstretch("bg.jpg", {speed: 150});
          }
       })
       .resize();//trigger resize on page load
