--- a/404.html
+++ b/404.html
@@ -3,10 +3,26 @@
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="initial-scale=1.0, width=device-width"/>
 	<meta charset="utf-8"/>
-	<title>{{ page.title }} | {{ site.title }}</title>
+	<title>Error 404</title>
 	<meta name="author" content="Timm Schoof" />
 	<meta http-equiv="content-language" content="en">
 	<meta name="robots" content="all">
 	<link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
 	<link rel="stylesheet" media="screen" href="/stylesheets/style.css"/>
 </head>
+<body>
+<!--include jquery & backstretch-->
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="jquery.backstretch.min.js"></script>
+<script type="text/javascript">
+$(function(){
+     $(window).resize(function(){
+         if($(this).width() >= 767){
+             $.backstretch("404.jpg", {speed: 150});
+         }
+      })
+      .resize();//trigger resize on page load
+});
+</script>
+</body>
+</html>
