--- a/404.html
+++ b/404.html
@@ -9,7 +9,12 @@
 	<meta name="robots" content="all">
 	<link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
 	<link rel="stylesheet" media="screen" href="/stylesheets/style.css"/>
+	<style>
+	@media (max-width: 767px) {
+	body { background-color: rgba(16,16,16,1.0);}	
 	
+}
+	</style>
 </head>
 <body>
 <!--include jquery & backstretch-->
@@ -18,9 +23,9 @@
 <script type="text/javascript">
 $(function(){
      $(window).resize(function(){
-        
+         if($(this).width() >= 767){
              $.backstretch("404.jpg", {speed: 150});
-         
+         }
       })
       .resize();//trigger resize on page load
 });
