--- a/404.html
+++ b/404.html
@@ -11,7 +11,8 @@
 	<link rel="stylesheet" media="screen" href="/stylesheets/style.css"/>
 	<style>
 	@media (max-width: 767px) {
-	body { background-color: rgba(16,16,16,1.0);}	
+	body { background-color: rgba(16,16,16,1.0);
+			background-image: 0;}	
 	
 }
 	</style>
