--- a/index.html
+++ b/index.html
@@ -40,3 +40,7 @@ title: Home
   {% endif %}
 
 </div>
+
+<script src="//static.getclicky.com/js" type="text/javascript"></script>
+<script type="text/javascript">try{ clicky.init(100601428); }catch(e){}</script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100601428ns.gif" /></p></noscript>
