--- a/impressum.html
+++ b/impressum.html
@@ -6,12 +6,11 @@ permalink: /impressum/
 <h1 class="page">Impressum &amp; Datenschutz</h1>
 
 <p>Timm Schoof<br />
-Unzerstr. 1-3<br />22767 Hamburg</p>
+Unzerstraße 1-3<br />22767 Hamburg</p>
 <p>Telefon: 0151 70155652<br />
 E-Mail: <a href="mailto:hello@timmschoof.com">hello@timmschoof.com</a><br />
 </p>
 <p><strong>Verantwortlich für den Inhalt</strong> (gem. § 55 Abs. 2 RStV):<br />
 Timm Schoof<br />
 Unzerstraße 1-3<br />
-22767 Hamburg<br />
-Germany</p>
+22767 Hamburg</p>
