--- a/impressum.html
+++ b/impressum.html
@@ -6,7 +6,7 @@ permalink: /impressum/
 <h1 class="page">Impressum &amp; Datenschutz</h1>
 
 <p>Timm Schoof<br />
-Hauptstr. 29<br />10827 Berlin</p>
+Geisbergstr. 42<br />10777 Berlin</p>
 <p>Telefon: 0151 70155652<br />
 E-Mail: <a href="mailto:hello@timmschoof.com">hello@timmschoof.com</a><br />
 </p>
