--- a/impressum.html
+++ b/impressum.html
@@ -12,5 +12,5 @@ E-Mail: <a href="mailto:hello@timmschoof.com">hello@timmschoof.com</a><br />
 </p>
 <p><strong>Verantwortlich für den Inhalt</strong> (gem. § 55 Abs. 2 RStV):<br />
 Timm Schoof<br />
-Hauptstraße 29<br />
-10827 Berlin</p>
+Geisbergstr. 42<br />
+10777 Berlin</p>
